@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rubyforge
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.7 2007/03/14 07:35:28 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.8 2007/04/13 23:32:14 robbat2 Exp $
+
+  13 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> rubyforge-0.4.1.ebuild:
+  Add ~ppc for work.
 
 *rubyforge-0.4.1 (14 Mar 2007)
 
