@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/hoe
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.8 2007/03/14 07:40:39 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.9 2007/04/13 23:33:35 robbat2 Exp $
+
+  13 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> hoe-1.2.0.ebuild:
+  Add ~ppc for work.
 
 *hoe-1.2.0 (14 Mar 2007)
 
